force-app/main/default/objects/Group_Patient__c/Group_Patient__c.object-meta.xml
<CustomObject>
    <description>This object has a master detail on both Account and Patient Group and is used to store which patient is associated with which Group.</description>
    <label>Group Patient</label>
    <nameField>
        <displayFormat>GP-{0000}</displayFormat>
        <label>Group Patient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Patients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>