force-app/main/default/objects/Group_Patient__c/fields/Criteria_Based_Addition__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Based_Addition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Criteria Based Addition?</label>
    <type>Checkbox</type>
</CustomField>