force-app/main/default/objects/Group_Patient__c/fields/Current_Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Patient_Name__c</fullName>
    <label>Current Patient Name</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <filterItems>
            <field>Account.Current_Status_Of_Patient__c</field>
            <operation>equals</operation>
            <value>Current Patients</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>notEqual</operation>
            <value>Business_Account</value>
        </filterItems>
        <filterItems>
            <field>Account.Elixir_Account_Type__c</field>
            <operation>notEqual</operation>
            <value>Elixir_Business_Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Group Patients</relationshipLabel>
    <relationshipName>Group_Patients</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>