force-app/main/default/objects/Group_Patient__c/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <label>Group Name</label>
    <referenceTo>Account_Group__c</referenceTo>
    <relationshipLabel>Group Patients</relationshipLabel>
    <relationshipName>Group_Patients</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>