force-app/main/default/objects/Group_Patient__c/fields/Prevent_Patient_Save__c.field-meta.xml
<CustomField>
    <fullName>Prevent_Patient_Save__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prevent Patient Save</label>
    <type>Checkbox</type>
</CustomField>