force-app/main/default/objects/Group_Patient__c/validationRules/addErrorOnGroupPatient.validationRule-meta.xml
<ValidationRule>
    <fullName>addErrorOnGroupPatient</fullName>
    <active>true</active>
    <errorConditionFormula>AND((Group_Name__r.Maximum_Patients__c =  Group_Name__r.Number_of_Patients__c),
(Group_Name__r.PatientGroupValidationBreak__c = true) )</errorConditionFormula>
    <errorMessage>You’ve reached the maximum patient limit for this group. Please remove existing patients to add more</errorMessage>
</ValidationRule>