force-app/main/default/objects/Group_Patient__c/validationRules/Prevent_Duplicate_Patient_Save_To_Group.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Duplicate_Patient_Save_To_Group</fullName>
    <active>true</active>
    <errorConditionFormula>Prevent_Patient_Save__c  = true</errorConditionFormula>
    <errorMessage>Patient is already a part of this group</errorMessage>
</ValidationRule>